--- a/Awesome Points Of Interests/Base.lproj/Main.storyboard
+++ b/Awesome Points Of Interests/Base.lproj/Main.storyboard
@@ -1,14 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="LRE-TL-z6A">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--List View Controller-->
+        <scene sceneID="9l7-Es-mlb">
+            <objects>
+                <viewController id="LRE-TL-z6A" customClass="POIListViewController" customModule="Awesome_Points_Of_Interests" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ecv-Vf-GIf"/>
+                        <viewControllerLayoutGuide type="bottom" id="icB-1V-weh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xAg-vJ-9c4">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qmv-01-TD0">
+                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="poiCell" id="H2j-KZ-i2N" customClass="POITableViewCell" customModule="Awesome_Points_Of_Interests" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="H2j-KZ-i2N" id="MGl-OZ-wPZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type de POI" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fH3-Y4-iOB">
+                                                    <rect key="frame" x="313" y="11.666666666666668" width="93" height="20.333333333333332"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.71373334390862941" green="0.71373334390862941" blue="0.71373334390862941" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="zmB-w9-3GT">
+                                                    <rect key="frame" x="8" y="0.0" width="130.33333333333334" height="43.666666666666664"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QSn-j3-tcg">
+                                                            <rect key="frame" x="0.0" y="4.3333333333333321" width="35" height="35"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="QSn-j3-tcg" secondAttribute="height" multiplier="1:1" id="DVj-9Z-3Fv"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="vxq-fz-RCW">
+                                                            <rect key="frame" x="43" y="5" width="87.333333333333343" height="33.666666666666664"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nom du POI" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m94-NZ-7Ta">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="87.333333333333343" height="19.333333333333332"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adresse" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWm-Ub-CJ8">
+                                                                    <rect key="frame" x="0.0" y="19.333333333333336" width="45.666666666666671" height="14.333333333333336"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="zmB-w9-3GT" firstAttribute="leading" secondItem="MGl-OZ-wPZ" secondAttribute="leading" constant="8" id="Bee-jv-YJS"/>
+                                                <constraint firstAttribute="bottom" secondItem="zmB-w9-3GT" secondAttribute="bottom" id="Kb4-iu-3rg"/>
+                                                <constraint firstItem="fH3-Y4-iOB" firstAttribute="trailing" secondItem="MGl-OZ-wPZ" secondAttribute="trailingMargin" id="TfI-b7-BXI"/>
+                                                <constraint firstItem="zmB-w9-3GT" firstAttribute="top" secondItem="MGl-OZ-wPZ" secondAttribute="top" id="c1f-l9-OaX"/>
+                                                <constraint firstItem="fH3-Y4-iOB" firstAttribute="centerY" secondItem="MGl-OZ-wPZ" secondAttribute="centerY" id="dcA-1J-Orp"/>
+                                                <constraint firstItem="QSn-j3-tcg" firstAttribute="height" secondItem="MGl-OZ-wPZ" secondAttribute="height" multiplier="0.8" id="nwP-Io-TMs"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="addressLabel" destination="rWm-Ub-CJ8" id="Zbp-V5-6K3"/>
+                                            <outlet property="nameLabel" destination="m94-NZ-7Ta" id="rMD-jW-KLB"/>
+                                            <outlet property="poiImageView" destination="QSn-j3-tcg" id="tgP-rp-G57"/>
+                                            <outlet property="typeLabel" destination="fH3-Y4-iOB" id="8oy-HW-f7U"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="LRE-TL-z6A" id="X3v-Ee-6hL"/>
+                                    <outlet property="delegate" destination="LRE-TL-z6A" id="LCd-pj-9ge"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="icB-1V-weh" firstAttribute="top" secondItem="qmv-01-TD0" secondAttribute="bottom" id="Dg4-aD-cDA"/>
+                            <constraint firstItem="qmv-01-TD0" firstAttribute="leading" secondItem="xAg-vJ-9c4" secondAttribute="leading" id="ENu-q4-wFl"/>
+                            <constraint firstAttribute="trailing" secondItem="qmv-01-TD0" secondAttribute="trailing" id="X8V-Dq-jvB"/>
+                            <constraint firstItem="qmv-01-TD0" firstAttribute="top" secondItem="ecv-Vf-GIf" secondAttribute="bottom" id="qbd-OD-4u0"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2hs-Fm-vLb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-313" y="37"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -185,7 +282,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="36" y="37.331334332833585"/>
+            <point key="canvasLocation" x="825" y="37"/>
         </scene>
     </scenes>
 </document>
