Added tab bar controller

--- a/Awesome Points Of Interests/Base.lproj/Main.storyboard
+++ b/Awesome Points Of Interests/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="PId-00-F5l">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="x72-Rd-orq">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qmv-01-TD0">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="687"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="LRE-TL-z6A" id="X3v-Ee-6hL"/>
@@ -52,7 +52,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2hs-Fm-vLb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="594.20289855072474" y="36.684782608695656"/>
+            <point key="canvasLocation" x="1501.449275362319" y="36.684782608695656"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="kyA-1B-b2G">
@@ -70,7 +70,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jIE-5X-Lo2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1567" y="352"/>
+            <point key="canvasLocation" x="2473.913043478261" y="351.35869565217394"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -253,12 +253,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1567" y="-421"/>
+            <point key="canvasLocation" x="2473.913043478261" y="-421.46739130434787"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Item-->
         <scene sceneID="rQy-88-4bf">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PId-00-F5l" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="bjt-y0-i1P"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="4nO-D1-LV5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -270,6 +271,43 @@
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fiC-Rj-aug" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="594.20289855072474" y="36.684782608695656"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="tpL-0U-9hm">
+            <objects>
+                <viewController id="I4I-8Z-qbF" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rAR-kN-dq6"/>
+                        <viewControllerLayoutGuide type="bottom" id="8kx-2u-Wgi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="J7p-Nl-29q">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.1244706731" blue="0.1686318336" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="VdH-Qh-uE2"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H40-qE-Lqk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="594" y="786"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="VkO-kM-vGL">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="x72-Rd-orq" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="bwx-0V-4lw">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="PId-00-F5l" kind="relationship" relationship="viewControllers" id="acl-Vv-65S"/>
+                        <segue destination="I4I-8Z-qbF" kind="relationship" relationship="viewControllers" id="V6k-ky-twI"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7vM-QA-HZt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-313.04347826086956" y="36.684782608695656"/>
         </scene>
